# DORK

./: .gitignore  README.md
examples/: basic.cpp  dense_output.cpp  lazy_runge_kutta.cpp  lazy_runge_kutta_parameters.cpp  parameters.cpp  runge_kutta.cpp  runge_kutta_parameters.cpp  step_control.cpp  system.cpp
examples/cmake/: CMakeLists.txt
include/: coefficients.hpp  dork.hpp  solver.hpp
include/runge_kutta/: coefficients.hpp  dense_output.hpp  dense_output_coefficients.hpp  runge_kutta.hpp
include/utils/: assigner.hpp  constructor.hpp  types.hpp  utils.hpp
source/: CMakeLists.txt  main.cpp
source/include/runge_kutta/: coefficients.hpp  dense_output.hpp  dense_output_coefficients.hpp  runge_kutta.hpp
source/include/utils/: assigner.hpp  constructor.hpp  types.hpp  utils.hpp
